...
        android:layout_marginTop="24dp"
        android:text="@string/overall_score_review"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <RatingBar
        android:id="@+id/reviewRatingBar"
        style="@android:style/Widget.Material.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
...
        android:layout_gravity="center"
        android:hint="@string/title_edit_text"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addReviewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>


...
        android:layout_gravity="center"
        android:hint="@string/comment_edit_text"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addReviewComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/doneButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/done_button_text" />
</LinearLayout>
