<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:id="@+id/author_profile_panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoDragView="@id/panelProfile">

    <!-- MAIN CONTENT: REVIEW LIST -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/reviewRecyclerView"
            layout="@layout/layout_loading_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="4dp"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/addReviewButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:backgroundTint="@color/white"
            android:elevation="50dp"
            app:borderWidth="0dp"
            app:icon="@android:drawable/ic_input_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- DRAGGABLE VIEW: SELECTED AUTHOR PROFILE -->

    <include
        layout="@layout/author_profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</com.sothree.slidinguppanel.SlidingUpPanelLayout>