...
    -- REVIEW --
    <string name="review_sent_text">Your review was submitted !</string>
    <string name="num_reviews">(%s reviews)</string>
    <string name="zero_num_reviews">(No review submitted)</string>
    <string name="i_like_this_review">I like this review</string>
    <string name="i_don_t_like_this_review">I don\'t like this review</string>
    <string name="anonymous">Anonymous</string>
    <string name="best_rated_order_title">Best rated</string>
    <string name="worst_rated_order_title">Worst rated</string>
    <string name="title_review">How was it?</string>
    <string name="done_button_text">DONE</string>
    <string name="review_text_button">REVIEW</string>
    <string name="title_review_list">Title</string>
...
